--- a/client/src/styles/auth.css
+++ b/client/src/styles/auth.css
@@ -249,7 +249,7 @@
 .form-actions-horizontal {
   display: flex;
   gap: 1rem;
-  justify-content: flex-end;
+  justify-content: space-evenly;
   margin-top: 1.5rem;
 }
 
